[workspace]
members = [
  "erc721",
  "erc721-cryptopunks",
  "erc721-metadata",
  "erc1155",
  "erc1155-metadata",
  "seaport",

  # Common
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "EVM NFTs"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.6.1"
substreams-abis = "0.4.4"
substreams-ethereum = "0.10.5"

[profile.release]
lto = true
