[package]
name = "erc721-cryptopunks"
description = "ERC721 compatible events for CryptoPunks"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Denis Carriere <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }
